Add light mode colours.

--- a/Portfolio/Views/Home/Index.cshtml
+++ b/Portfolio/Views/Home/Index.cshtml
@@ -4,12 +4,12 @@
 
 <div id="top">
     <div class="text-center hide">
-        <h1 class="text-6xl title mb-4 text-mint">Christopher Dykes</h1>
+        <h1 class="text-6xl title mb-4 text-miku dark:text-mint">Christopher Dykes</h1>
         <h3 class="text-4xl sub-title mb-8">Full Stack Web Developer</h3>
     </div>
 
     <div class="flex justify-center hide">
-        <div class="bg-nord5 rounded-full w-48 h-48">
+        <div class="bg-mint2 dark:bg-white2 rounded-full w-48 h-48">
             <img src="miku.png" alt="miku icon" class="my-auto w-auto h-full object-contain"/>
         </div>
     </div>
@@ -34,66 +34,66 @@
 
 </div>
 
-<div class="wave-one">
+<div class="wave-one fill-white3 dark:fill-black2">
     <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
         <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
     </svg>
 </div>
 
-<div id="projects" class="bg-nord0 pt-16 pb-8">
+<div id="projects" class="bg-white3 dark:bg-black2 pt-16 pb-8">
     <div class="text-center hide">
-        <h2 class="text-5xl title text-mint">Web Projects</h2>
-        <i class="fas fa-laptop-code mt-8" style="font-size: 100px !important;"></i>
+        <h2 class="text-5xl title text-miku dark:text-mint">Web Projects</h2>
+        <i class="fas fa-laptop-code mt-8 text-mint2 dark:text-white3" style="font-size: 100px !important;"></i>
     </div>
     
     <div class="flex justify-center mt-8 px-5 mx-auto w-full sm:w-3/4 font-regular text-xl hide">
         @* Figure Web API *@
-        <div class="bg-nord1 p-10 mb-5 rounded-lg shadow-lg"> 
+        <div class="bg-white1 dark:bg-black3 p-10 mb-5 rounded-lg shadow-lg"> 
             <h3 class="text-2xl font-medium text-nord6 mb-2">Figure Web API</h3>
             <p>
                 A Restful Web API built with C# and ASP.NET Core.
             </p>
             <div class="links mt-2">
-                <a href="https://api.anime-figures.moe/figure" class="text-mint" target="_blank">Application Link</a> | 
-                <a href="https://github.com/chris-dykes-j/figure-api" class="text-mint" target="_blank">Source Code</a>
+                <a href="https://api.anime-figures.moe/figure" class="text-miku dark:text-mint" target="_blank">Application Link</a> | 
+                <a href="https://github.com/chris-dykes-j/figure-api" class="text-miku dark:text-mint" target="_blank">Source Code</a>
             </div>
         </div>
     </div>
     
     <div class="flex justify-center mt-4 px-5 mx-auto w-full sm:w-3/4 font-regular text-xl hide">
         @* Go School Project *@
-        <div class="bg-nord1 p-10 mb-5 rounded-lg shadow-lg"> 
+        <div class="bg-white1 dark:bg-black3 p-10 mb-5 rounded-lg shadow-lg"> 
             <h3 class="text-2xl font-medium text-nord6 mb-2">Golang School Project</h3>
             <p>
                 A CRUD application built with Go and Postgres.
             </p>
             <div class="links mt-2">
-                <a href="https://github.com/chris-dykes-j/vegetable-go" class="text-mint" target="_blank">Source Code</a>
+                <a href="https://github.com/chris-dykes-j/vegetable-go" class="text-miku dark:text-mint" target="_blank">Source Code</a>
             </div>
         </div>
     </div>
 </div>
 
-<div class="wave-two bg-nord0">
+<div class="wave-two bg-white3 dark:bg-black2 fill-white2 dark:fill-black1">
     <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
         <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
     </svg>
 </div>
 
-<div id="contact" class="bg-nord-dark pt-16 pb-16">
+<div id="contact" class="dark:bg-nord-dark pt-16 pb-16">
     <div class="text-center hide">
-        <h2 class="text-5xl title text-mint">Contact Me</h2>
-        <a href="mailto:chris.dykes.j@gmail.com" class="hover:text-mint">
+        <h2 class="text-5xl title text-miku dark:text-mint">Contact Me</h2>
+        <a href="mailto:chris.dykes.j@gmail.com" class="text-mint2 dark:text-white3 hover:text-miku2 dark:hover:text-mint">
             <i class="fas fa-envelope mt-4" style="font-size: 100px !important;"></i>
         </a>
     </div>
     
     <div class="mt-8 mb-16 px-5 mx-auto w-full sm:w-3/4 font-regular text-xl hide">
         <p class="text-center">
-            If you'd like to make a business inquiry, shoot me an <a href="mailto:chris.dykes.j@gmail.com" class="text-mint" target="_blank">email</a>!
+            If you'd like to make a business inquiry, shoot me an <a href="mailto:chris.dykes.j@gmail.com" class="text-miku dark:text-mint" target="_blank">email</a>!
         </p>
         <p class="text-center">
-            You can also find me on <a href="https://github.com/chris-dykes-j" class="text-mint" target="_blank">github</a> or <a href="https://www.linkedin.com/in/christopher-dykes/" class="text-mint" target="_blank">linkedin</a>.
+            You can also find me on <a href="https://github.com/chris-dykes-j" class="text-miku dark:text-mint" target="_blank">github</a> or <a href="https://www.linkedin.com/in/christopher-dykes/" class="text-miku dark:text-mint" target="_blank">linkedin</a>.
         </p>
     </div>
 </div>
