--- a/Portfolio/wwwroot/css/tailwind.css
+++ b/Portfolio/wwwroot/css/tailwind.css
@@ -684,24 +684,32 @@ video {
   border-radius: 0.5rem;
 }
 
-.bg-nord-dark {
+.bg-mint2 {
   --tw-bg-opacity: 1;
-  background-color: rgb(41 46 57 / var(--tw-bg-opacity));
+  background-color: rgb(143 188 187 / var(--tw-bg-opacity));
 }
 
-.bg-nord0 {
+.bg-white1 {
   --tw-bg-opacity: 1;
-  background-color: rgb(46 52 64 / var(--tw-bg-opacity));
+  background-color: rgb(216 222 233 / var(--tw-bg-opacity));
 }
 
-.bg-nord1 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 66 82 / var(--tw-bg-opacity));
-}
-
-.bg-nord5 {
+.bg-white2 {
   --tw-bg-opacity: 1;
   background-color: rgb(229 233 240 / var(--tw-bg-opacity));
+}
+
+.bg-white3 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(236 239 244 / var(--tw-bg-opacity));
+}
+
+.fill-white2 {
+  fill: #e5e9f0;
+}
+
+.fill-white3 {
+  fill: #eceff4;
 }
 
 .object-contain {
@@ -773,19 +781,24 @@ video {
   font-weight: 500;
 }
 
-.text-mint {
+.text-black1 {
   --tw-text-opacity: 1;
-  color: rgb(185 233 232 / var(--tw-text-opacity));
+  color: rgb(41 46 57 / var(--tw-text-opacity));
 }
 
-.text-nord4 {
+.text-grey2 {
   --tw-text-opacity: 1;
-  color: rgb(216 222 233 / var(--tw-text-opacity));
+  color: rgb(76 86 106 / var(--tw-text-opacity));
 }
 
-.text-nord6 {
+.text-miku {
   --tw-text-opacity: 1;
-  color: rgb(236 239 244 / var(--tw-text-opacity));
+  color: rgb(68 155 162 / var(--tw-text-opacity));
+}
+
+.text-mint2 {
+  --tw-text-opacity: 1;
+  color: rgb(143 188 187 / var(--tw-text-opacity));
 }
 
 .shadow-lg {
@@ -794,30 +807,63 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.transition {
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
+@media (hover: hover) and (pointer: fine) {
+  .hover\:text-miku:hover {
+    --tw-text-opacity: 1;
+    color: rgb(68 155 162 / var(--tw-text-opacity));
+  }
+
+  .hover\:text-miku2:hover {
+    --tw-text-opacity: 1;
+    color: rgb(148 213 189 / var(--tw-text-opacity));
+  }
 }
 
-.transition-all {
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
+:is(.dark .dark\:bg-black1) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(41 46 57 / var(--tw-bg-opacity));
 }
 
-.duration-700 {
-  transition-duration: 700ms;
+:is(.dark .dark\:bg-black2) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(46 52 64 / var(--tw-bg-opacity));
 }
 
-.ease-in-out {
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+:is(.dark .dark\:bg-black3) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 66 82 / var(--tw-bg-opacity));
+}
+
+:is(.dark .dark\:bg-white2) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 233 240 / var(--tw-bg-opacity));
+}
+
+:is(.dark .dark\:fill-black1) {
+  fill: #292E39;
+}
+
+:is(.dark .dark\:fill-black2) {
+  fill: #2e3440;
+}
+
+:is(.dark .dark\:text-mint) {
+  --tw-text-opacity: 1;
+  color: rgb(185 233 232 / var(--tw-text-opacity));
+}
+
+:is(.dark .dark\:text-white1) {
+  --tw-text-opacity: 1;
+  color: rgb(216 222 233 / var(--tw-text-opacity));
+}
+
+:is(.dark .dark\:text-white3) {
+  --tw-text-opacity: 1;
+  color: rgb(236 239 244 / var(--tw-text-opacity));
 }
 
 @media (hover: hover) and (pointer: fine) {
-  .hover\:text-mint:hover {
+  :is(.dark .dark\:hover\:text-mint:hover) {
     --tw-text-opacity: 1;
     color: rgb(185 233 232 / var(--tw-text-opacity));
   }
