--- a/Portfolio/Views/Shared/_Layout.cshtml
+++ b/Portfolio/Views/Shared/_Layout.cshtml
@@ -52,7 +52,17 @@
 
 <div id="footer" class="bg-white2 dark:bg-black1 text-grey2 dark:text-white1 font-regular py-8">
     <div class="flex justify-center">
-        <p>&copy; 2023 Christopher Dykes, some rights reserved</p>
+        <p>&copy; 2023 Christopher Dykes. Some rights reserved.</p>
+    </div>
+    <div class="flex justify-center">
+        <p>
+            Image of Hatsune Miku used under <a href="https://piapro.net/intl/en_for_creators.html" class="hover:text-miku dark:hover:text-mint">Creative Commons License</a>.
+        </p>
+    </div>
+    <div class="flex justify-center">
+        <p>
+            Hatsune Miku is the intellectual property of Crypton Future Media, INC.
+        </p>
     </div>
 </div>
 
