--- a/Portfolio/Views/Home/Index.cshtml
+++ b/Portfolio/Views/Home/Index.cshtml
@@ -40,6 +40,41 @@
     </svg>
 </div>
 
+
+<div id="projects2" class="bg-white3 dark:bg-black2 pt-16 pb-8">
+    <div class="text-center hide">
+        <h2 class="text-5xl title text-miku dark:text-mint">Software Projects</h2>
+        <i class="fas fa-laptop-code mt-8 text-mint2 dark:text-white3" style="font-size: 100px !important;"></i>
+    </div>
+    
+    @* Figure Web API *@
+    <div class="flex justify-center mt-8 px-5 mx-auto w-full sm:w-3/4 font-regular text-xl hide">
+        <div class="bg-white1 dark:bg-black3 p-10 mb-5 rounded-lg shadow-sm"> 
+            <h3 class="text-2xl font-medium text-nord6 mb-2">Figure Web API</h3>
+            <p>
+                A Restful Web API built with C# and ASP.NET Core.
+            </p>
+            <div class="links mt-2">
+                <a href="https://api.anime-figures.moe/figure" class="text-miku dark:text-mint" target="_blank">Application Link</a> | 
+                <a href="https://github.com/chris-dykes-j/figure-api" class="text-miku dark:text-mint" target="_blank">Source Code</a>
+            </div>
+        </div>
+    </div>
+    
+    @* Go School Project *@
+    <div class="flex justify-center mt-4 px-5 mx-auto w-full sm:w-3/4 font-regular text-xl hide">
+        <div class="bg-white1 dark:bg-black3 p-10 mb-5 rounded-lg shadow-lg"> 
+            <h3 class="text-2xl font-medium text-nord6 mb-2">Golang School Project</h3>
+            <p>
+                A CRUD application built with Go and Postgres.
+            </p>
+            <div class="links mt-2">
+                <a href="https://github.com/chris-dykes-j/vegetable-go" class="text-miku dark:text-mint" target="_blank">Source Code</a>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div id="projects" class="bg-white3 dark:bg-black2 pt-16 pb-8">
     <div class="text-center hide">
         <h2 class="text-5xl title text-miku dark:text-mint">Web Projects</h2>
