Update project cards.

--- a/Portfolio/Views/Home/Index.cshtml
+++ b/Portfolio/Views/Home/Index.cshtml
@@ -40,69 +40,42 @@
     </svg>
 </div>
 
-
-<div id="projects2" class="bg-white3 dark:bg-black2 pt-16 pb-8">
-    <div class="text-center hide">
-        <h2 class="text-5xl title text-miku dark:text-mint">Software Projects</h2>
-        <i class="fas fa-laptop-code mt-8 text-mint2 dark:text-white3" style="font-size: 100px !important;"></i>
-    </div>
-    
-    @* Figure Web API *@
-    <div class="flex justify-center mt-8 px-5 mx-auto w-full sm:w-3/4 font-regular text-xl hide">
-        <div class="bg-white1 dark:bg-black3 p-10 mb-5 rounded-lg shadow-sm"> 
-            <h3 class="text-2xl font-medium text-nord6 mb-2">Figure Web API</h3>
-            <p>
-                A Restful Web API built with C# and ASP.NET Core.
-            </p>
-            <div class="links mt-2">
-                <a href="https://api.anime-figures.moe/figure" class="text-miku dark:text-mint" target="_blank">Application Link</a> | 
-                <a href="https://github.com/chris-dykes-j/figure-api" class="text-miku dark:text-mint" target="_blank">Source Code</a>
-            </div>
-        </div>
-    </div>
-    
-    @* Go School Project *@
-    <div class="flex justify-center mt-4 px-5 mx-auto w-full sm:w-3/4 font-regular text-xl hide">
-        <div class="bg-white1 dark:bg-black3 p-10 mb-5 rounded-lg shadow-lg"> 
-            <h3 class="text-2xl font-medium text-nord6 mb-2">Golang School Project</h3>
-            <p>
-                A CRUD application built with Go and Postgres.
-            </p>
-            <div class="links mt-2">
-                <a href="https://github.com/chris-dykes-j/vegetable-go" class="text-miku dark:text-mint" target="_blank">Source Code</a>
-            </div>
-        </div>
-    </div>
-</div>
-
 <div id="projects" class="bg-white3 dark:bg-black2 pt-16 pb-8">
     <div class="text-center hide">
         <h2 class="text-5xl title text-miku dark:text-mint">Web Projects</h2>
         <i class="fas fa-laptop-code mt-8 text-mint2 dark:text-white3" style="font-size: 100px !important;"></i>
     </div>
-    
-    <div class="flex justify-center mt-8 px-5 mx-auto w-full sm:w-3/4 font-regular text-xl hide">
+
+    <div class="flex flex-col md:flex-row justify-center mt-8 px-5 mx-auto w-full xl:w-3/4 font-regular text-xl hide">
         @* Figure Web API *@
-        <div class="bg-white1 dark:bg-black3 p-10 mb-5 rounded-lg shadow-lg"> 
-            <h3 class="text-2xl font-medium text-nord6 mb-2">Figure Web API</h3>
-            <p>
-                A Restful Web API built with C# and ASP.NET Core.
-            </p>
-            <div class="links mt-2">
+        <div class="flex-1 bg-white1 dark:bg-black3 p-8 mb-5 rounded-lg shadow-lg mx-4"> 
+            <h3 class="text-2xl font-medium text-nord6 mb-4 text-miku dark:text-mint">Figure Web API</h3>
+            <div class="mb-8">
+                <p>
+                    A Restful Web API that sends data about anime figures from a variety of companies in the form of JSON. 
+                </p>
+                <p>
+                    Built with C#, ASP.NET Core, PostgreSQL.
+                </p>
+            </div>
+            <div class="links absolute bottom-0 mb-10">
                 <a href="https://api.anime-figures.moe/figure" class="text-miku dark:text-mint" target="_blank">Application Link</a> | 
                 <a href="https://github.com/chris-dykes-j/figure-api" class="text-miku dark:text-mint" target="_blank">Source Code</a>
             </div>
         </div>
-    </div>
     
-    <div class="flex justify-center mt-4 px-5 mx-auto w-full sm:w-3/4 font-regular text-xl hide">
         @* Go School Project *@
-        <div class="bg-white1 dark:bg-black3 p-10 mb-5 rounded-lg shadow-lg"> 
-            <h3 class="text-2xl font-medium text-nord6 mb-2">Golang School Project</h3>
-            <p>
-                A CRUD application built with Go and Postgres.
-            </p>
-            <div class="links mt-2">
+        <div class="flex-1 bg-white1 dark:bg-black3 p-8 mb-5 rounded-lg shadow-lg mx-4"> 
+            <h3 class="text-2xl font-medium text-nord6 mb-4 text-miku dark:text-mint">Golang School Project</h3>
+            <div class="mb-8">
+                <p>
+                    A project that performs basic database operations, create, read, update, and delete. 
+                </p>
+                <p>
+                    Built with Go, PostgreSQL, and Bootstrap.
+                </p>
+            </div>
+            <div class="links absolute bottom-0 mb-10">
                 <a href="https://github.com/chris-dykes-j/vegetable-go" class="text-miku dark:text-mint" target="_blank">Source Code</a>
             </div>
         </div>
