--- a/Portfolio/Views/Home/Index.cshtml
+++ b/Portfolio/Views/Home/Index.cshtml
@@ -58,7 +58,7 @@
                     Built with C#, ASP.NET Core, PostgreSQL.
                 </p>
             </div>
-            <div class="links absolute bottom-0 mb-10">
+            <div class="links">
                 <a href="https://api.anime-figures.moe/figure" class="text-miku dark:text-mint" target="_blank">Application Link</a> | 
                 <a href="https://github.com/chris-dykes-j/figure-api" class="text-miku dark:text-mint" target="_blank">Source Code</a>
             </div>
@@ -75,7 +75,7 @@
                     Built with Go, PostgreSQL, and Bootstrap.
                 </p>
             </div>
-            <div class="links absolute bottom-0 mb-10">
+            <div class="links">
                 <a href="https://github.com/chris-dykes-j/vegetable-go" class="text-miku dark:text-mint" target="_blank">Source Code</a>
             </div>
         </div>
