--- a/Portfolio/Views/Shared/_Layout.cshtml
+++ b/Portfolio/Views/Shared/_Layout.cshtml
@@ -54,12 +54,12 @@
     <div class="flex justify-center">
         <p>&copy; 2023 Christopher Dykes. Some rights reserved.</p>
     </div>
-    <div class="flex justify-center">
+    <div class="flex justify-center text-center">
         <p>
             Image of Hatsune Miku used under <a href="https://piapro.net/intl/en_for_creators.html" class="hover:text-miku dark:hover:text-mint">Creative Commons License</a>.
         </p>
     </div>
-    <div class="flex justify-center">
+    <div class="flex justify-center text-center">
         <p>
             Hatsune Miku is the intellectual property of Crypton Future Media, INC.
         </p>
