Apply animation to separate elements.

--- a/Portfolio/Views/Home/Index.cshtml
+++ b/Portfolio/Views/Home/Index.cshtml
@@ -14,19 +14,19 @@
         </div>
     </div>
     
-    <div class="mt-8 px-5 mx-auto w-full sm:w-3/4 font-regular text-xl hide">
-        <p>
+    <div class="mt-8 px-5 mx-auto w-full sm:w-3/4 font-regular text-xl">
+        <p class="hide">
             Hi! I'm Chris, a software developer from Ottawa, Canada.
             My expertise is in creating full-stack web applications and backend solutions.
             If you're in need of a secure, high-performance web application, or you're looking for a skilled developer to join your team, you've come to the right place.
         </p>
         <br/>
-        <p>
+        <p class="hide">
             I bring versatility and depth to projects with my knowledge and experience with a wide array of programming languages and frameworks, including but not limited to C# and ASP.NET Core, Go, and JavaScript/TypeScript and Express.js.
             My expertise extends beyond code, encompassing SQL and NoSQL databases, and Linux distributions like Arch and Debian.
         </p>
         <br/>
-        <p>
+        <p class="hide">
             I love exploring new technologies and emerging trends to ensure that the solutions I deliver take full advantage of the innovations in the tech industry.
             If you'd like to see my skills in action, please have a look at the projects below!
         </p>
@@ -46,9 +46,9 @@
         <i class="fas fa-laptop-code mt-8 text-mint2 dark:text-white3" style="font-size: 100px !important;"></i>
     </div>
 
-    <div class="flex flex-col md:flex-row justify-center mt-12 px-5 mx-auto w-full xl:w-3/4 font-regular text-xl hide">
+    <div class="flex flex-col md:flex-row justify-center mt-12 px-5 mx-auto w-full xl:w-3/4 font-regular text-xl">
         @* Figure Web API *@
-        <div class="flex-1 bg-white1 dark:bg-black3 p-8 mb-5 rounded-lg shadow-lg mx-4"> 
+        <div class="flex-1 bg-white1 dark:bg-black3 p-8 mb-5 rounded-lg shadow-lg mx-4 hide"> 
             <h3 class="text-2xl font-medium text-nord6 mb-4 text-miku dark:text-mint">Figure Web API</h3>
             <div class="mb-8">
                 <p>
@@ -65,7 +65,7 @@
         </div>
     
         @* Go School Project *@
-        <div class="flex-1 bg-white1 dark:bg-black3 p-8 mb-5 rounded-lg shadow-lg mx-4"> 
+        <div class="flex-1 bg-white1 dark:bg-black3 p-8 mb-5 rounded-lg shadow-lg mx-4 hide"> 
             <h3 class="text-2xl font-medium text-nord6 mb-4 text-miku dark:text-mint">Golang School Project</h3>
             <div class="mb-8">
                 <p>
