Update intro and projects.

--- a/Portfolio/Views/Home/Index.cshtml
+++ b/Portfolio/Views/Home/Index.cshtml
@@ -22,8 +22,8 @@
         </p>
         <br/>
         <p class="hide">
-            I bring versatility and depth to projects with my knowledge and experience with a wide array of programming languages and frameworks, including but not limited to C# and ASP.NET Core, Go, and JavaScript/TypeScript and Express.js.
-            My expertise extends beyond code, encompassing SQL and NoSQL databases, and Linux distributions like Arch and Debian.
+            I bring versatility and depth to projects with my knowledge and experience with a wide array of programming languages and frameworks, including but not limited to C# with ASP.NET Core, Go, and JavaScript/TypeScript.
+            My expertise extends beyond code, encompassing SQL and NoSQL databases, and GNU/Linux distributions such as Arch and Debian.
         </p>
         <br/>
         <p class="hide">
@@ -55,7 +55,7 @@
                     A Restful Web API that sends data about anime figures from a variety of companies in the form of JSON. 
                 </p>
                 <p>
-                    Built with C#, ASP.NET Core, PostgreSQL.
+                    Built with C#, ASP.NET Core, and PostgreSQL.
                 </p>
             </div>
             <div class="links">
@@ -77,6 +77,40 @@
             </div>
             <div class="links">
                 <a href="https://github.com/chris-dykes-j/vegetable-go" class="text-miku dark:text-mint" target="_blank">Source Code</a>
+            </div>
+        </div>
+    </div>
+        
+    <div class="flex flex-col md:flex-row justify-center px-5 mx-auto w-full xl:w-3/4 font-regular text-xl">
+        @* Rhythm Weaver *@
+        <div class="flex-1 bg-white1 dark:bg-black3 p-8 mb-5 rounded-lg shadow-lg mx-4 hide"> 
+            <h3 class="text-2xl font-medium text-nord6 mb-4 text-miku dark:text-mint">Rhythm Weaver Web App</h3>
+            <div class="mb-8">
+                <p>
+                    A web application that generates musical rhythms and displays it as an image.
+                </p>
+                <p>
+                    Built with Go, HTMX, and TailwindCSS.
+                </p>
+            </div>
+            <div class="links">
+                <a href="https://github.com/chris-dykes-j/rhythm-weaver" class="text-miku dark:text-mint" target="_blank">Source Code</a>
+            </div>
+        </div>
+        
+        @* Figure Scraper *@
+        <div class="flex-1 bg-white1 dark:bg-black3 p-8 mb-5 rounded-lg shadow-lg mx-4 hide"> 
+            <h3 class="text-2xl font-medium text-nord6 mb-4 text-miku dark:text-mint">Figure Web Scraper</h3>
+            <div class="mb-8">
+                <p>
+                    A web scraper project to extract images and data from a figure retailer website.
+                </p>
+                <p>
+                    Built with Go.
+                </p>
+            </div>
+            <div class="links">
+                <a href="https://github.com/chris-dykes-j/figure-scraping-alter-go" class="text-miku dark:text-mint" target="_blank">Source Code</a>
             </div>
         </div>
     </div>
