--- a/Portfolio/Views/Home/Index.cshtml
+++ b/Portfolio/Views/Home/Index.cshtml
@@ -17,18 +17,16 @@
     <div class="mt-8 px-5 mx-auto w-full sm:w-3/4 font-regular text-xl">
         <p class="hide">
             Hi! I'm Chris, a software developer from Ottawa, Canada.
-            My expertise is in creating full-stack web applications and backend solutions.
-            If you're in need of a secure, high-performance web application, or you're looking for a skilled developer to join your team, you've come to the right place.
+            Currently, I am employed at Environment and Climate Change Canada.
         </p>
         <br/>
         <p class="hide">
-            I bring versatility and depth to projects with my knowledge and experience with a wide array of programming languages and frameworks, including but not limited to C# with ASP.NET Core, Go, and JavaScript/TypeScript.
-            My expertise extends beyond code, encompassing SQL and NoSQL databases, and GNU/Linux distributions such as Arch and Debian.
+            Whether it be fullstack applications or backend solutions, I like working with data oriented projects. 
+            Most of my expertise and experience is in C# and the .NET ecosystem, but I am also familiar and comfortable with using Go and Java.
         </p>
         <br/>
         <p class="hide">
-            I love exploring new technologies and emerging trends to ensure that the solutions I deliver take full advantage of the innovations in the tech industry.
-            If you'd like to see my skills in action, please have a look at the projects below!
+            If you'd like to see my portfolio work, please have a look at the projects below!
         </p>
     </div>
 
@@ -52,10 +50,7 @@
             <h3 class="text-2xl font-medium text-nord6 mb-4 text-miku dark:text-mint">Figure Web API</h3>
             <div class="mb-8">
                 <p>
-                    A Restful Web API that sends data about anime figures from a variety of companies in the form of JSON. 
-                </p>
-                <p>
-                    Built with C#, ASP.NET Core, and PostgreSQL.
+                    An almost RESTful Web API that sends data about anime figures from a variety of companies in the form of JSON.
                 </p>
             </div>
             <div class="links">
@@ -63,25 +58,7 @@
                 <a href="https://github.com/chris-dykes-j/figure-api" class="text-miku dark:text-mint" target="_blank">Source Code</a>
             </div>
         </div>
-    
-        @* Go School Project *@
-        <div class="flex-1 bg-white1 dark:bg-black3 p-8 mb-5 rounded-lg shadow-lg mx-4 hide"> 
-            <h3 class="text-2xl font-medium text-nord6 mb-4 text-miku dark:text-mint">Golang School Project</h3>
-            <div class="mb-8">
-                <p>
-                    A project that performs basic database operations, create, read, update, and delete. 
-                </p>
-                <p>
-                    Built with Go, PostgreSQL, and Bootstrap.
-                </p>
-            </div>
-            <div class="links">
-                <a href="https://github.com/chris-dykes-j/vegetable-go" class="text-miku dark:text-mint" target="_blank">Source Code</a>
-            </div>
-        </div>
-    </div>
         
-    <div class="flex flex-col md:flex-row justify-center px-5 mx-auto w-full xl:w-3/4 font-regular text-xl">
         @* Rhythm Weaver *@
         <div class="flex-1 bg-white1 dark:bg-black3 p-8 mb-5 rounded-lg shadow-lg mx-4 hide"> 
             <h3 class="text-2xl font-medium text-nord6 mb-4 text-miku dark:text-mint">Rhythm Weaver Web App</h3>
@@ -89,12 +66,25 @@
                 <p>
                     A web application that generates musical rhythms and displays it as an image.
                 </p>
-                <p>
-                    Built with Go, HTMX, and TailwindCSS.
-                </p>
             </div>
             <div class="links">
                 <a href="https://github.com/chris-dykes-j/rhythm-weaver" class="text-miku dark:text-mint" target="_blank">Source Code</a>
+            </div>
+        </div>
+    </div>
+        
+    <div class="flex flex-col md:flex-row justify-center px-5 mx-auto w-full xl:w-3/4 font-regular text-xl">
+        @* Go Dev Site *@
+        <div class="flex-1 bg-white1 dark:bg-black3 p-8 mb-5 rounded-lg shadow-lg mx-4 hide"> 
+            <h3 class="text-2xl font-medium text-nord6 mb-4 text-miku dark:text-mint">This Website!</h3>
+            <div class="mb-8">
+                <p>
+                    Built with C#, ASP.NET Core, Tailwind. Using a variation on the Nord theme.
+                </p>
+            </div>
+            <div class="links">
+                <a href="https://chris-dykes.dev" class="text-miku dark:text-mint" target="_blank">Website Link</a> | 
+                <a href="https://github.com/chris-dykes-j/portfolio-cs" class="text-miku dark:text-mint" target="_blank">Source Code</a>
             </div>
         </div>
         
@@ -104,9 +94,6 @@
             <div class="mb-8">
                 <p>
                     A web scraper project to extract images and data from a figure retailer website.
-                </p>
-                <p>
-                    Built with Go.
                 </p>
             </div>
             <div class="links">
@@ -132,10 +119,10 @@
     
     <div class="mt-8 mb-16 px-5 mx-auto w-full sm:w-3/4 font-regular text-xl hide">
         <p class="text-center">
-            If you'd like to make a business inquiry, shoot me an <a href="mailto:chris.dykes.j@gmail.com" class="text-miku dark:text-mint" target="_blank">email</a>!
+            If you'd like to make an inquiry, shoot me an <a href="mailto:chris.dykes.j@gmail.com" class="text-miku dark:text-mint" target="_blank">email</a>!
         </p>
         <p class="text-center">
-            You can also find me on <a href="https://github.com/chris-dykes-j" class="text-miku dark:text-mint" target="_blank">github</a> or <a href="https://www.linkedin.com/in/christopher-dykes/" class="text-miku dark:text-mint" target="_blank">linkedin</a>.
+            You can also find me on <a href="https://github.com/chris-dykes-j" class="text-miku dark:text-mint" target="_blank">github</a> or <a href="https://www.linkedin.com/in/christopher-dykes/" class="text-miku dark:text-mint" target="_blank">linkedin</a> if you dare.
         </p>
     </div>
 </div>
